--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "express": "^4.16.3",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "base32.js": "^0.1.0",
+    "crypto": "^1.0.1",
+    "express": "^4.16.3",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.10.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
@@ -27,7 +29,11 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^4.42.0",
+    "stellar-base": "^0.10.0",
+    "tendermint": "^3.4.0",
+    "varstruct": "^6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
