--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.0",
+    "node-fetch": "^2.3.0",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
