update get payment and sequence and post

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "node-fetch": "^2.3.0",
     "node-sass": "^4.10.0",
     "parse": "^2.1.0",
