--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "express": "^4.16.3",
     "history": "^4.7.2",
+    "http-https": "^1.0.0",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
