--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Sandeep Raveesh",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "base32": "0.0.6",
     "base32.js": "^0.1.0",
     "crypto": "^1.0.1",
     "express": "^4.16.3",
