--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base32": "0.0.6",
     "base32.js": "^0.1.0",
     "crypto": "^1.0.1",
+    "decimal.js": "^10.0.2",
     "express": "^4.16.3",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
