--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto": "^1.0.1",
     "decimal.js": "^10.0.2",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
